# meetup-planner

./: .gitignore  CHECKLIST_GHG5.md  CHECKLIST_GHG6.md  CHECKLIST_GHG7.md  CHECKLIST_GHG8.md  DEPLOY_NOTES.md  README.md  checklist.md
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_chukhan_reminders.py  0003_poll_tg_id.py  0004_admin_config.py  0005_chat_messages.py  0006_birthdays.py  0007_proxies.py  0008_worm_assignments.py  0009_bot_pause.py  (+8 more)
backend/app/: config.py  main.py
backend/tests/: test_admin_jobs.py  test_advice.py  test_auto_pick_overlap.py  test_avatar_url.py  test_birthday_greeting.py  test_birthday_greeting_post.py  test_birthday_immunity.py  test_bot_pause.py  test_bot_pause_announce.py  test_bot_reactions_propagation.py  test_bot_reply.py  test_calendar_marks.py  test_chukhan_reason.py  test_dead_chat.py  test_help_commands.py  test_initdata.py  test_loser_cooldown_split.py  test_loser_header_mapping.py  test_loser_outbox.py  test_loser_send_timeout_env.py  test_media_reactions.py  test_media_reactions_detector.py  test_media_recent_persist.py  test_meeting_feedback.py  test_net_pool.py  test_personas.py  test_phrase_snapshot.py  test_phrase_use_counts.py  test_polls_date_only.py  test_polls_pin.py  test_polls_quorum.py  test_posting_alerts.py  test_proxy_parse.py  test_random_phrases_dedup.py  test_random_phrases_mode.py  test_recency_weight.py  test_selftest_retry.py  test_space_restart.py  test_titles_current.py  test_welcome_prefs.py  (+2 more)
(+139 files in other folders)
