[project]
name = "meetup-planner-backend"
version = "0.1.0"
description = "Telegram Mini App backend: bot + REST API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "aiogram==3.13.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "httpx==0.27.2",
    "python-multipart==0.0.17",
    "aiosqlite==0.20.0",
    "apscheduler==3.10.4",
    "tzdata==2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
